--- a/Kafala.Web.ViewModels/Kafala.Web.ViewModels.csproj
+++ b/Kafala.Web.ViewModels/Kafala.Web.ViewModels.csproj
@@ -62,7 +62,7 @@
     <Compile Include="PaymentPeriod\EditPaymentPeriodViewModel.cs" />
     <Compile Include="PaymentPeriod\ViewPaymentPeriodViewModel.cs" />
     <Compile Include="Donor\DonorDashBoard.cs" />
-    <Compile Include="Payment\CommitmentIndexViewModel.cs" />
+    <Compile Include="Payment\PaymentIndexViewModel.cs" />
     <Compile Include="Payment\OverDuePaymentViewModel.cs" />
     <Compile Include="Payment\CreatePaymentViewModel.cs" />
     <Compile Include="Payment\EditPaymentViewModel.cs" />
@@ -81,6 +81,10 @@
     <ProjectReference Include="..\Foundation.FormBuilder\Foundation.FormBuilder.csproj">
       <Project>{c5fa847f-2fb5-403d-ad02-3e9332bf60c7}</Project>
       <Name>Foundation.FormBuilder</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Foundation.Web\Foundation.Web.csproj">
+      <Project>{baa4e4d3-bdf1-45a9-85b2-9ba6e58e2e24}</Project>
+      <Name>Foundation.Web</Name>
     </ProjectReference>
     <ProjectReference Include="..\Kafala.BusinessManagers\Kafala.BusinessManagers.csproj">
       <Project>{a5d4402e-ce60-420e-b14c-4dcc6f8815e7}</Project>
