--- a/Foundation.Persistence/Foundation.Persistence.csproj
+++ b/Foundation.Persistence/Foundation.Persistence.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ConnectionString.cs" />
     <Compile Include="IAuthenticatableUser.cs" />
     <Compile Include="IConnectionString.cs" />
+    <Compile Include="IPagedList.cs" />
     <Compile Include="ISessionFactoryProvider.cs" />
     <Compile Include="ISessionProvider.cs" />
     <Compile Include="ITypeHolder.cs" />
@@ -69,8 +70,11 @@
     <Compile Include="INHibernateMappingConfigurationFactory.cs" />
     <Compile Include="ISessionFactoryFactory.cs" />
     <Compile Include="NhibernateConfigurationFactory.cs" />
+    <Compile Include="PagedList.cs" />
+    <Compile Include="PagingInfo.cs" />
     <Compile Include="PersistenceRegistery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryPager.cs" />
     <Compile Include="SessionFactoryFactory.cs" />
     <Compile Include="SessionFactoryProvider.cs" />
     <Compile Include="SessionProvider.cs" />
