--- a/Kafala.Web.UI/Kafala.Web.UI.csproj
+++ b/Kafala.Web.UI/Kafala.Web.UI.csproj
@@ -113,6 +113,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\DonationCaseController.cs" />
     <Compile Include="Controllers\CommitmentController.cs" />
     <Compile Include="Controllers\PaymentPeriodController.cs" />
@@ -129,6 +130,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>KafalaFlashMessages.resx</DependentUpon>
     </Compile>
+    <Compile Include="WebConfigurator.cs" />
     <Compile Include="WebRegistery.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -251,6 +253,11 @@
     <Content Include="Views\PaymentPeriod\Edit.cshtml" />
     <Content Include="Views\PaymentPeriod\Index.cshtml" />
     <Content Include="Views\PaymentPeriod\View.cshtml" />
+    <Content Include="Views\DonationCase\Create.cshtml" />
+    <Content Include="Views\DonationCase\Edit.cshtml" />
+    <Content Include="Views\DonationCase\View.cshtml" />
+    <Content Include="Views\DonationCase\Index.cshtml" />
+    <Content Include="Views\Menu\InPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Commitment\Partial\" />
