--- a/Kafala.Web.UI/Web.config
+++ b/Kafala.Web.UI/Web.config
@@ -28,13 +28,6 @@
       </authorization>
     </system.web>
   </location>
-  <location path="Home/CheckCredentials">
-    <system.web>
-      <authorization>
-        <allow users="?" />
-      </authorization>
-    </system.web>
-  </location>
   <location path="Home/LogOn">
     <system.web>
       <authorization>
@@ -73,7 +66,7 @@
       <forms loginUrl="~/Home/LogOn" timeout="2880" />
     </authentication>
     <authorization>
-      <allow users="?" />
+      <deny users="?" />
       <!--SHOULD BE DENY-->
     </authorization>
     <pages controlRenderingCompatibilityVersion="4.0">
