--- a/Kafala.Query/Kafala.Query.csproj
+++ b/Kafala.Query/Kafala.Query.csproj
@@ -49,6 +49,7 @@
       <HintPath>..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -80,7 +81,8 @@
     <Compile Include="Donor\DonorListModelPopulator.cs" />
     <Compile Include="Donor\DonorViewModelPopulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Security\UserAuthenticationFacade.cs" />
+    <Compile Include="Security\AuthenticationService.cs" />
+    <Compile Include="Security\UserToken.cs" />
     <Compile Include="Shared\MenuPopulator.cs" />
   </ItemGroup>
   <ItemGroup>
