authentication unit tests

--- a/Foundation.Infrastructure/Foundation.Infrastructure.csproj
+++ b/Foundation.Infrastructure/Foundation.Infrastructure.csproj
@@ -65,6 +65,7 @@
     <Compile Include="BL\IBusinessManagerContainer.cs" />
     <Compile Include="BL\IBusinessManagerRegistery.cs" />
     <Compile Include="BL\IBusinessManagerInvocationLogger.cs" />
+    <Compile Include="Notifications\EmailLogger.cs" />
     <Compile Include="Notifications\EmailService.cs" />
     <Compile Include="Notifications\IEmailLogger.cs" />
     <Compile Include="Notifications\IEmailService.cs" />
