--- a/Kafala.Web.UI/Views/Web.config
+++ b/Kafala.Web.UI/Views/Web.config
@@ -15,8 +15,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="Kafala.Web.ViewModels" />
+        <add namespace="Foundation.Web" />
         <add namespace="VortexSoft.Bootstrap" />
         <add namespace="Foundation.FormBuilder" />
+        <add namespace="Foundation.Web.Extensions" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
