--- a/Foundation.Web/packages.config
+++ b/Foundation.Web/packages.config
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="2.2.1" targetFramework="net40" />
-  <package id="CodeSharp.Package.AspNetMvc3" version="3.0" targetFramework="net40" />
-  <package id="CodeSharp.Package.AspNetWebPage" version="1.0" targetFramework="net40" />
+  <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
+  <package id="AutoMapper" version="3.0.0" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
 </packages>
