--- a/Kafala.Query/packages.config
+++ b/Kafala.Query/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
+  <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
+  <package id="AutoMapper" version="3.0.0" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
 </packages>
