--- a/Foundation.Web/Foundation.Web.csproj
+++ b/Foundation.Web/Foundation.Web.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Extensions\MvcPanelTab.cs" />
     <Compile Include="Extensions\PagerExtensions.cs" />
     <Compile Include="Extensions\BasePagingExtensions.cs" />
+    <Compile Include="Extensions\PopulatorHelpers.cs" />
     <Compile Include="Extensions\TableSorterExtensions.cs" />
     <Compile Include="Extensions\UrlHelperExtensions.cs" />
     <Compile Include="Filter\FilterUtility.cs" />
@@ -79,6 +80,8 @@
     <Compile Include="Navigation\MenuContainer.cs" />
     <Compile Include="Navigation\MenuItem.cs" />
     <Compile Include="Paging\IPagedList.cs" />
+    <Compile Include="Paging\IPagingInfo.cs" />
+    <Compile Include="Paging\IPagingParameters.cs" />
     <Compile Include="Paging\PagedList.cs" />
     <Compile Include="Paging\PagingInfo.cs" />
     <Compile Include="Paging\QueryPager.cs" />
